# tf_comp_cheesepp

./: README.md  pyproject.toml
cheesepp/: __init__.py  __main__.py  cli.py  ctx.py  errors.py  grammar.lark  node.py  parser.py  runtime.py  testing.py  transformer.py
exemplos/: exemplo_02.cheesepp  exemplo_04.cheesepp  exemplo_05.cheesepp  exemplo_06.cheesepp
tests/: test_exemplo_01.py  test_exemplo_02.py  test_exemplo_13.py
